deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: agconn
  labels:
    app.kubernetes.io/part-of: agconn
